# nether

./: .env  .env.example  .gitignore  LICENSE  README.md  SPRINT_1_5_MODEL_OPTIMIZATION.md  SPRINT_1_IMPLEMENTATION_GUIDE.md  SPRINT_1_QUICK_REFERENCE.md  build.gradle.kts  debug.keystore.base64  gradle.properties  metadata.json  settings.gradle.kts  test-plan.md
.agents/skills/testing-nether-android/: SKILL.md
.jules/: bolt.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/: MainActivity.kt
app/src/main/java/com/example/data/: InferenceEngine.kt  LlamaBridge.kt  LlamaCppNative.kt  LlamaModel.kt  LocalCryptoUtils.kt  LocalModels.kt  McpClient.kt  ModelManager.kt  SecureDatabase.kt  SkillRegistry.kt
app/src/main/java/com/example/navigation/: AppNav.kt
app/src/main/java/com/example/network/: OllamaClient.kt
app/src/main/java/com/example/ui/screens/: ChatScreen.kt  DashboardScreen.kt  DiagnosticsScreen.kt
app/src/main/java/com/example/utils/: DeviceHelper.kt  DeviceProfiler.kt
app/src/main/java/com/example/viewmodel/: LocalAiViewModel.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
gradle/: libs.versions.toml
